HADOOP-19614. git tag suggested format example: docker-image-3.4.1

--- a/.github/workflows/build-and-tag-hadoop-image.yaml
+++ b/.github/workflows/build-and-tag-hadoop-image.yaml
@@ -100,7 +100,7 @@ jobs:
           images: |
             ${{ github.repository_owner }}/hadoop
           tags: |
-            type=ref,event=tag
+            type=match,pattern=docker-image-(.*),value={{ ref_name }},group=1
           flavor: |
             latest=false
 
