--- a/.github/workflows/build-and-tag-hadoop-image.yaml
+++ b/.github/workflows/build-and-tag-hadoop-image.yaml
@@ -36,6 +36,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      image-id: ${{ steps.meta.outputs.tags }}
     steps:
       - name: Generate image ID
         id: meta
