--- a/.github/workflows/build-and-tag-hadoop-image.yaml
+++ b/.github/workflows/build-and-tag-hadoop-image.yaml
@@ -28,6 +28,8 @@ on:
     branches:
       - 'docker-hadoop-**'
       - '!docker-hadoop-runner-**'
+    tags:
+      - 'docker-image-*'
 
 permissions:
   contents: read
