--- a/.github/workflows/build-and-tag-hadoop-image.yaml
+++ b/.github/workflows/build-and-tag-hadoop-image.yaml
@@ -90,7 +90,7 @@ jobs:
           images: |
             ${{ github.repository_owner }}/hadoop
           tags: |
-            type=match,pattern=docker-image-(.*),value=${{ github.ref_name }},group=1
+            type=ref,event=tag
           flavor: |
             latest=false
 
