--- a/.github/workflows/build-and-tag-hadoop-image.yaml
+++ b/.github/workflows/build-and-tag-hadoop-image.yaml
@@ -95,7 +95,7 @@ jobs:
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/hadoop
+            ${{ github.repository_owner }}/hadoop
           tags: |
             type=ref,event=tag
           flavor: |
