--- a/.github/workflows/build-and-tag-hadoop-image.yaml
+++ b/.github/workflows/build-and-tag-hadoop-image.yaml
@@ -53,7 +53,7 @@ jobs:
             success=true
           fi
 
-          echo "success=$success" >> $GITHUB_OUTPUT
+          echo "success=false" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         if: ${{ steps.pull.outputs.success == 'false' }}
