--- a/.github/workflows/build-and-tag.yaml
+++ b/.github/workflows/build-and-tag.yaml
@@ -13,74 +13,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: build-and-tag-hadoop-image
+name: build-and-tag
 
 # This workflow builds the Hadoop docker image.
 # For non-PR runs, it also pushes the image to the registry, tagging it based on the branch name.
 
 on:
-  push:
-    branches:
-      - 'docker-hadoop-**'
-      - '!docker-hadoop-runner-**'
-
-permissions:
-  contents: read
-  packages: write
+  workflow_call:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    outputs:
-      image-id: ${{ steps.meta.outputs.tags }}
-    steps:
-      - name: Generate image ID
-        id: meta
-        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81
-        with:
-          images: |
-            ghcr.io/${{ github.repository_owner }}/hadoop
-          tags: |
-            type=match,pattern=docker-hadoop-(.*),value={{branch}},group=1
-          flavor: |
-            latest=false
-
-      - name: Check if image exists
-        id: pull
-        run: |
-          success=false
-          if docker pull "$DOCKER_METADATA_OUTPUT_TAGS"; then
-            success=true
-          fi
-
-          echo "success=false" >> $GITHUB_OUTPUT
-
-      - name: Set up QEMU
-        if: ${{ steps.pull.outputs.success == 'false' }}
-        uses: docker/setup-qemu-action@49b3bc8e6bdd4a60e6116a5414239cba5943d3cf
-
-      - name: Set up Docker Buildx
-        if: ${{ steps.pull.outputs.success == 'false' }}
-        uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349
-
-      - name: Login to GitHub Container Registry
-        id: login
-        if: ${{ github.event_name != 'pull_request' && steps.pull.outputs.success == 'false' }}
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push image
-        id: build
-        if: ${{ steps.pull.outputs.success == 'false' }}
-        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75
-        with:
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    uses: ./.github/workflows/build.yaml
 
   tag:
     needs: build
@@ -91,10 +34,13 @@ jobs:
       IMAGE_ID: ${{ needs.build.outputs.image-id }}
       REGISTRIES: ghcr.io # docker.io is appended dynamically
     steps:
-      - name: Debug GitHub Ref Type and Ref
+      - name: Debug GitHub Context Variables
         run: |
           echo "GitHub Ref: ${{ github.ref }}"
           echo "GitHub Ref Type: ${{ github.ref_type }}"
+          echo "GitHub Event Name: ${{ github.event_name }}"
+          echo "GitHub Event Ref: ${{ github.event.ref }}"
+          echo "GitHub Ref Name: ${{ github.ref_name }}"
       - name: Generate tags
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81
         with:
